[project]
name = "example_package_eriesgo"
version = "0.0.2"
authors = [
  { name="Enrique Riesgo", email="enrique.riesgo@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/eriesgo/example_package"
Issues = "https://github.com/eriesgo/example_package/issues"